Fixed #61.5 : updated maven-compiler-plugin -> test were not run because there was a bug in old version